home page started

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script defer src="../javascript/index.jsx"></script>
   <link rel="stylesheet" href="../sass/imports/imports.scss">
-  <link rel="icon" href="final_postscript2.png">
+  <link rel="icon" href="../resources/icons/favicon/favicon-32x32.png">
   <title>Music-Site</title>
 </head>
 
