--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="description" content="Fake Music-Site for Portfolio">
-  <meta name="keywords" content="Music, Guitar, Buy, Shop, New, Instruments">
-  <meta name="author" content="John Doe">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Fake Music-Site for Portfolio" />
+    <meta
+      name="keywords"
+      content="Music, Guitar, Buy, Shop, New, Instruments"
+    />
+    <meta name="author" content="John Doe" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap"
     rel="stylesheet"> -->
-  <script defer src="../javascript/index.tsx"></script>
-  <link rel="stylesheet" href="../sass/imports/imports.scss">
-  <link rel="icon" href="../resources/icons/favicon/favicon-32x32.png">
-  <title>Music-Site</title>
-</head>
+    <script defer src="../typescript/index.tsx"></script>
+    <link rel="stylesheet" href="../sass/imports/imports.scss" />
+    <link rel="icon" href="../resources/icons/favicon/favicon-32x32.png" />
+    <title>Music-Site</title>
+  </head>
 
-<body>
-  <div id="root" class="fade-in-fx"></div>
-</body>
-
+  <body>
+    <div id="root" class="fade-in-fx"></div>
+  </body>
 </html>
